Allow for multiple project-level issues (#9407)